# DevOps-Copilot

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  audit.py  autonomy.py  billing.py  cli.py  config.py  correlation.py  feedback.py  governance.py  guardrails.py  incident_memory.py  jobqueue.py  llm.py  metering.py  metrics_source.py  observability.py  otel.py  policy.py  prompt_registry.py  ratelimit.py  redaction.py  replay.py  resilience.py  routing.py  runtime.py  secrets_vault.py  secretsmgr.py  session.py  slo_metrics.py  slo_poller.py  spend.py  tenant_context.py
app/api/: main.py
app/graph/: builder.py  edges.py  nodes.py  prompts.py  sandbox.py  state.py
app/integrations/: __init__.py  pagerduty.py  slack.py
app/mcp/: client.py
app/mcp/servers/datadog/: server.py
app/mcp/servers/deploys/: server.py
app/mcp/servers/github/: server.py
app/mcp/servers/kubernetes/: server.py
app/mcp/servers/logs_metrics/: server.py
app/mcp/servers/memory/: corpus.json  server.py
app/mcp/servers/pagerduty/: server.py
app/mcp/servers/repo/: server.py
app/mcp/servers/sentry/: server.py
app/mcp/servers/traces/: server.py
app/tenancy/: __init__.py  auth.py  models.py  scim.py  store.py  supabase_auth.py
deploy/helm/: README.md
deploy/helm/copilot/: Chart.yaml  values.yaml
deploy/helm/copilot/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  pvc.yaml  secret.yaml  (+2 more)
deploy/observability/: grafana-dashboard.json  prometheus-alerts.yaml
deploy/postgres/: README.md  rls.sql
docs/: AGENT.md  ARCHITECTURE.md  COMMERCIALIZATION.md  CONFIGURATION.md  CONNECTORS.md  EVALUATION.md  HARDENING.md  PRODUCT-ARCHITECTURE.md  README.md  USAGE.md
evals/: benchmark.py  benchmark_cases.yaml  golden_cases.yaml  record_golden_offline.py  redteam_corpus.yaml  run_benchmark.py  run_evals.py  run_golden.py  run_redteam.py  scorers.py  testcases.yaml
evals/cassettes/: README.md  golden.json
frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  themes.ts  types.ts
frontend/src/components/: ActivityTimeline.tsx  AdminPanel.tsx  AmbientBackground.tsx  ApprovalCard.tsx  Composer.tsx  Console.tsx  ErrorBoundary.tsx  GithubConnect.tsx  Header.tsx  Hero3D.tsx  Icon.tsx  Landing.tsx  Message.tsx  ModelConfig.tsx  RcaReportCard.tsx  Sidebar.tsx  SignupModal.tsx  Skeleton.tsx  SourceConnect.tsx  ThemePicker.tsx  landing.css
frontend/src/hooks/: useConfig.test.ts  useConfig.ts  useCopilot.ts  useMe.ts  useTheme.ts
sample_repo/: README.md  checkout.js  checkout.test.js
tests/: test_api.py  test_autonomy.py  test_benchmark.py  test_billing.py  test_billing_webhook.py  test_checkpointer.py  test_config.py  test_connectors.py  test_correlation.py  test_edges.py  test_eval_scorers.py  test_feedback_audit.py  test_foundations.py  test_governance.py  test_guardrails.py  test_jobqueue.py  test_learning.py  test_llm.py  test_memory.py  test_metrics_source.py  test_nodes.py  test_observability.py  test_otel.py  test_policy.py  test_prompt_registry.py  test_ratelimit.py  test_redaction.py  test_redteam.py  test_replay.py  test_repo_sandbox.py  test_resilience.py  test_rls_policies.py  test_routing.py  test_runtime.py  test_sandbox.py  test_scim.py  test_secretsmgr.py  test_session.py  test_slo_metrics.py  test_slo_poller.py  (+6 more)
(+1 files in other folders)
