[project]
name = "devops-copilot"
version = "0.1.0"
description = "An autonomous DevOps assistant built with LangChain, LangGraph, and MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM + LangChain building blocks
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-core>=0.3.0",
    # Orchestration brain
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.0",
    # MCP: protocol SDK + LangChain adapter
    "mcp>=1.1.0",
    "langchain-mcp-adapters>=0.0.5",
    # API layer
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    # Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[project.scripts]
copilot = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
