[project]
name = "devops-copilot"
version = "0.1.0"
description = "An autonomous DevOps assistant built with LangChain, LangGraph, and MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM + LangChain building blocks (one integration per provider)
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",       # OpenAI + DeepSeek (OpenAI-compatible)
    "langchain-google-genai>=2.0.0", # Google Gemini
    "langchain-groq>=0.2.0",
    # Orchestration brain
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.0",
    # MCP: protocol SDK + LangChain adapter
    "mcp>=1.1.0",
    "langchain-mcp-adapters>=0.0.5",
    # API layer
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    # Used directly for GitHub validation (api/main.py) and the GitHub MCP server.
    "httpx>=0.27.0",
    # Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# All five provider SDKs already ship in the base install above; this extra is a
# convenience alias kept for backwards compatibility (no separate install needed).
providers = [
    "langchain-openai>=0.2.0",      # OpenAI + DeepSeek (OpenAI-compatible)
    "langchain-google-genai>=2.0.0", # Google Gemini
]
# Multi-tenant foundations (opt-in; base install stays single-instance/SQLite):
postgres = ["langgraph-checkpoint-postgres>=2.0.0"]  # COPILOT_CHECKPOINT_DB=postgres://...
secrets = ["cryptography>=42.0"]                     # per-tenant secret vault
apm = ["ddtrace>=4.0"]                               # Datadog APM (DD_TRACE_ENABLED=true)
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[project.scripts]
copilot = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # third-party stubs (langchain/langgraph/mcp) absent
# Pragmatic: type-check our own code without demanding full strictness.

[tool.pytest.ini_options]
asyncio_mode = "auto"
